--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,7 +23,7 @@
     <string name="register_text_main">Zarejestruj się</string>
     <string name="register_text_sub">Załóż nowe konto i zacznij korzystać z aplikacji!</string>
 
-    <string name="connect_text_small">Kliknij na ikonę wyżej, aby połączyć się ze swoim urządzeniem</string>
+    <string name="connect_text_small">Zbliż swoje urządzenie do telefonu i kliknij na ikonę wyżej.</string>
     <string name="connect_text_sub">znajdź swoje urządzenie poprzez Bluetooth!</string>
     <string name="connect_text_main">Połącz się</string>
     <string name="connect_image">Połącz z urządzeniem</string>
@@ -32,7 +32,11 @@
     <string name="app_actual_text_calories_sub">spalonych</string>
     <string name="app_actual_text_steps">zrobionych kroków</string>
     <string name="app_actual_text_distance">twoja droga</string>
-    <string name="app_actual_text_heartrate">tętno</string>
+    <string name="app_actual_text_heartbeat">tętno</string>
     <string name="app_actual_text_sub">Dane pobierane bezpośrednio z urządzenia, pamiętaj, że nie są one poddane analizie, więc mogą się różnić od faktycznych!</string>
     <string name="app_actual_text_main">Teraz</string>
+
+    <string name="app_actual_value_heartbeat">%1$d bpm</string>
+    <string name="app_actual_value_distance">%1$s m</string>
+    <string name="app_actual_value_calories">%1$s cal</string>
 </resources>
