Bluetooth stability improved

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,7 +2,7 @@
     <string name="app_name">Limfy</string>
     <string name="limfy_logo">Limfy logo</string>
 
-    <string name="info_registered">Konto założone, możesz się teraz zalogować</string>
+    <string name="info_registered">Konto założone, możesz się teraz zalogować!</string>
 
     <string name="error_connection">Wystąpił błąd z połączeniem</string>
     <string name="error_conflict">Nazwa użytkownika jest już zajęta</string>
@@ -13,6 +13,7 @@
     <string name="error_not_supported">Twoje urządzenie nie wspiera Bluetooth Low Energy</string>
     <string name="error_agreement">Zgoda na korzystanie z lokalizacji jest wymagana</string>
     <string name="error_device_not_found">Nie znaleziono urządzenia, spróbuj ponownie</string>
+    <string name="error_device_disconnected">Połączenie z urządzeniem zostało utracone</string>
 
     <string name="login_field_login">Nazwa użytkownika</string>
     <string name="login_field_password">Hasło</string>
