--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -34,6 +34,7 @@
     <string name="app_disconnect_icon">Rozłącz</string>
     <string name="app_view_disconnected">Rozłączono urządzenie</string>
 
+    <!-- CLEANUP -->
     <string name="app_actual_text_arrow">Przejdź niżej</string>
     <string name="app_actual_text_calories_sub">spalonych</string>
     <string name="app_actual_text_steps">zrobionych kroków</string>
@@ -41,7 +42,6 @@
     <string name="app_actual_text_heartbeat">tętno</string>
     <string name="app_actual_text_sub">Dane pobierane bezpośrednio z urządzenia, pamiętaj, że nie są one poddane analizie, więc mogą się różnić od faktycznych!</string>
     <string name="app_actual_text_main">Teraz</string>
-
     <string name="app_actual_value_heartbeat">%1$d bpm</string>
     <string name="app_actual_value_distance">%1$s m</string>
     <string name="app_actual_value_calories">%1$s cal</string>
@@ -58,6 +58,10 @@
     <string name="app_today_steps_description">kroków</string>
     <string name="app_today_distance_description">twoja droga</string>
     <string name="app_today_calories_description">spalonych</string>
+
+    <string name="app_today_value_heartbeat">%1$d bpm</string>
+    <string name="app_today_value_distance">%1$s m</string>
+    <string name="app_today_value_calories">%1$s cal</string>
 
     <string name="app_history_name">Historia</string>
     <string name="app_history_measurements">Zapisane pomiary</string>
